--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests/tests.js",
+    "test-watch": "nodemon --exec \"npm test\"",
     "dev": "nodemon server.js",
     "loadDB": "node ./services/loaderDB.js"
   },
@@ -29,7 +30,10 @@
     "node-fetch": "^2.3.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "dotenv": "^6.1.0",
-    "nodemon": "^1.18.7"
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.7",
+    "sinon": "^7.1.1"
   }
 }
