--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PORT = 3000
 MONGODB = "mongodb://localhost:27017/dbname"
 SECRETJWT = "abc123$"
+TEST_MONGODB ="mongodb://localhost:27017/dbname_test"
